src/compiler/tests/snapshots/test_output__parser_output_symbol_table@Main.jack-6.snap
---
source: src/compiler/tests/test_output.rs
expression: result_xml
input_file: src/compiler/tests/inputs/11/Average/Main.jack
---
<class>
  <keyword> class </keyword>
  <identifier> Main </identifier>
  <symbol> { </symbol>
  <subroutineDec>
    <keyword> function </keyword>
    <keyword> void </keyword>
    <identifier> main </identifier>
    <symbol> ( </symbol>
    <parameterList>
    </parameterList>
    <symbol> ) </symbol>
    <subroutineBody>
      <symbol> { </symbol>
      <varDec>
        <keyword> var </keyword>
        <identifier> Array </identifier>
        <identifier>
          <identifierName> a </identifierName>
          <identifierCategory> local </identifierCategory>
          <identifierIndex> 0 </identifierIndex>
          <identifierIsUsed> false </identifierIsUsed>
        </identifier>
        <symbol> ; </symbol>
      </varDec>
      <varDec>
        <keyword> var </keyword>
        <keyword> int </keyword>
        <identifier>
          <identifierName> length </identifierName>
          <identifierCategory> local </identifierCategory>
          <identifierIndex> 1 </identifierIndex>
          <identifierIsUsed> false </identifierIsUsed>
        </identifier>
        <symbol> ; </symbol>
      </varDec>
      <varDec>
        <keyword> var </keyword>
        <keyword> int </keyword>
        <identifier>
          <identifierName> i </identifierName>
          <identifierCategory> local </identifierCategory>
          <identifierIndex> 2 </identifierIndex>
          <identifierIsUsed> false </identifierIsUsed>
        </identifier>
        <symbol> , </symbol>
        <identifier>
          <identifierName> sum </identifierName>
          <identifierCategory> local </identifierCategory>
          <identifierIndex> 3 </identifierIndex>
          <identifierIsUsed> false </identifierIsUsed>
        </identifier>
        <symbol> ; </symbol>
      </varDec>
      <statements>
        <letStatement>
          <keyword> let </keyword>
          <identifier>
            <identifierName> length </identifierName>
            <identifierCategory> local </identifierCategory>
            <identifierIndex> 1 </identifierIndex>
            <identifierIsUsed> true </identifierIsUsed>
          </identifier>
          <symbol> = </symbol>
          <expression>
            <term>
              <identifier> Keyboard </identifier>
              <symbol> . </symbol>
              <identifier> readInt </identifier>
              <symbol> ( </symbol>
              <expressionList>
                <expression>
                  <term>
                    <stringConstant> How many numbers?  </stringConstant>
                  </term>
                </expression>
              </expressionList>
              <symbol> ) </symbol>
            </term>
          </expression>
          <symbol> ; </symbol>
        </letStatement>
        <letStatement>
          <keyword> let </keyword>
          <identifier>
            <identifierName> a </identifierName>
            <identifierCategory> local </identifierCategory>
            <identifierIndex> 0 </identifierIndex>
            <identifierIsUsed> true </identifierIsUsed>
          </identifier>
          <symbol> = </symbol>
          <expression>
            <term>
              <identifier> Array </identifier>
              <symbol> . </symbol>
              <identifier> new </identifier>
              <symbol> ( </symbol>
              <expressionList>
                <expression>
                  <term>
                    <identifier>
                      <identifierName> length </identifierName>
                      <identifierCategory> local </identifierCategory>
                      <identifierIndex> 1 </identifierIndex>
                      <identifierIsUsed> true </identifierIsUsed>
                    </identifier>
                  </term>
                </expression>
              </expressionList>
              <symbol> ) </symbol>
            </term>
          </expression>
          <symbol> ; </symbol>
        </letStatement>
        <letStatement>
          <keyword> let </keyword>
          <identifier>
            <identifierName> i </identifierName>
            <identifierCategory> local </identifierCategory>
            <identifierIndex> 2 </identifierIndex>
            <identifierIsUsed> true </identifierIsUsed>
          </identifier>
          <symbol> = </symbol>
          <expression>
            <term>
              <integerConstant> 0 </integerConstant>
            </term>
          </expression>
          <symbol> ; </symbol>
        </letStatement>
        <whileStatement>
          <keyword> while </keyword>
          <symbol> ( </symbol>
          <expression>
            <term>
              <identifier>
                <identifierName> i </identifierName>
                <identifierCategory> local </identifierCategory>
                <identifierIndex> 2 </identifierIndex>
                <identifierIsUsed> true </identifierIsUsed>
              </identifier>
            </term>
            <symbol> &lt; </symbol>
            <term>
              <identifier>
                <identifierName> length </identifierName>
                <identifierCategory> local </identifierCategory>
                <identifierIndex> 1 </identifierIndex>
                <identifierIsUsed> true </identifierIsUsed>
              </identifier>
            </term>
          </expression>
          <symbol> ) </symbol>
          <symbol> { </symbol>
          <statements>
            <letStatement>
              <keyword> let </keyword>
              <identifier>
                <identifierName> a </identifierName>
                <identifierCategory> local </identifierCategory>
                <identifierIndex> 0 </identifierIndex>
                <identifierIsUsed> true </identifierIsUsed>
              </identifier>
              <symbol> [ </symbol>
              <expression>
                <term>
                  <identifier>
                    <identifierName> i </identifierName>
                    <identifierCategory> local </identifierCategory>
                    <identifierIndex> 2 </identifierIndex>
                    <identifierIsUsed> true </identifierIsUsed>
                  </identifier>
                </term>
              </expression>
              <symbol> ] </symbol>
              <symbol> = </symbol>
              <expression>
                <term>
                  <identifier> Keyboard </identifier>
                  <symbol> . </symbol>
                  <identifier> readInt </identifier>
                  <symbol> ( </symbol>
                  <expressionList>
                    <expression>
                      <term>
                        <stringConstant> Enter a number:  </stringConstant>
                      </term>
                    </expression>
                  </expressionList>
                  <symbol> ) </symbol>
                </term>
              </expression>
              <symbol> ; </symbol>
            </letStatement>
            <letStatement>
              <keyword> let </keyword>
              <identifier>
                <identifierName> sum </identifierName>
                <identifierCategory> local </identifierCategory>
                <identifierIndex> 3 </identifierIndex>
                <identifierIsUsed> true </identifierIsUsed>
              </identifier>
              <symbol> = </symbol>
              <expression>
                <term>
                  <identifier>
                    <identifierName> sum </identifierName>
                    <identifierCategory> local </identifierCategory>
                    <identifierIndex> 3 </identifierIndex>
                    <identifierIsUsed> true </identifierIsUsed>
                  </identifier>
                </term>
                <symbol> + </symbol>
                <term>
                  <identifier>
                    <identifierName> a </identifierName>
                    <identifierCategory> local </identifierCategory>
                    <identifierIndex> 0 </identifierIndex>
                    <identifierIsUsed> true </identifierIsUsed>
                  </identifier>
                  <symbol> [ </symbol>
                  <expression>
                    <term>
                      <identifier>
                        <identifierName> i </identifierName>
                        <identifierCategory> local </identifierCategory>
                        <identifierIndex> 2 </identifierIndex>
                        <identifierIsUsed> true </identifierIsUsed>
                      </identifier>
                    </term>
                  </expression>
                  <symbol> ] </symbol>
                </term>
              </expression>
              <symbol> ; </symbol>
            </letStatement>
            <letStatement>
              <keyword> let </keyword>
              <identifier>
                <identifierName> i </identifierName>
                <identifierCategory> local </identifierCategory>
                <identifierIndex> 2 </identifierIndex>
                <identifierIsUsed> true </identifierIsUsed>
              </identifier>
              <symbol> = </symbol>
              <expression>
                <term>
                  <identifier>
                    <identifierName> i </identifierName>
                    <identifierCategory> local </identifierCategory>
                    <identifierIndex> 2 </identifierIndex>
                    <identifierIsUsed> true </identifierIsUsed>
                  </identifier>
                </term>
                <symbol> + </symbol>
                <term>
                  <integerConstant> 1 </integerConstant>
                </term>
              </expression>
              <symbol> ; </symbol>
            </letStatement>
          </statements>
          <symbol> } </symbol>
        </whileStatement>
        <doStatement>
          <keyword> do </keyword>
          <identifier> Output </identifier>
          <symbol> . </symbol>
          <identifier> printString </identifier>
          <symbol> ( </symbol>
          <expressionList>
            <expression>
              <term>
                <stringConstant> The average is  </stringConstant>
              </term>
            </expression>
          </expressionList>
          <symbol> ) </symbol>
          <symbol> ; </symbol>
        </doStatement>
        <doStatement>
          <keyword> do </keyword>
          <identifier> Output </identifier>
          <symbol> . </symbol>
          <identifier> printInt </identifier>
          <symbol> ( </symbol>
          <expressionList>
            <expression>
              <term>
                <identifier>
                  <identifierName> sum </identifierName>
                  <identifierCategory> local </identifierCategory>
                  <identifierIndex> 3 </identifierIndex>
                  <identifierIsUsed> true </identifierIsUsed>
                </identifier>
              </term>
              <symbol> / </symbol>
              <term>
                <identifier>
                  <identifierName> length </identifierName>
                  <identifierCategory> local </identifierCategory>
                  <identifierIndex> 1 </identifierIndex>
                  <identifierIsUsed> true </identifierIsUsed>
                </identifier>
              </term>
            </expression>
          </expressionList>
          <symbol> ) </symbol>
          <symbol> ; </symbol>
        </doStatement>
        <returnStatement>
          <keyword> return </keyword>
          <symbol> ; </symbol>
        </returnStatement>
      </statements>
      <symbol> } </symbol>
    </subroutineBody>
  </subroutineDec>
  <symbol> } </symbol>
</class>

